# ICIClient

./: .gitignore  .gitmodules  CMakeLists.txt  ICIClient.cpp  ICIClient.rc  ICIClient.sln  ICIClient.vcxproj  ICIClient.vcxproj.filters  LICENSE.txt  README.txt  console.cpp  displays.cpp  gl_impl.cpp  ici.h  resource.h  targetver.h
cmake/: FindGLEW.cmake  FindSDL2.cmake
glapi/: glad.c  glad.h
